app-damo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydemoapp
spec:
  selector:
    matchLabels:
      app: mydemoapp
  template:
    metadata:
      labels:
        app: mydemoapp
    spec:
      containers:
      - name: mydemoapp
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  selector:
    app: mydemoapp
  ports:
  - port: 80
    targetPort: 80
