app02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp02
spec:
  selector:
    matchLabels:
      app: myapp02
  template:
    metadata:
      labels:
        app: myapp02
    spec:
      containers:
      - name: myapp02
        image: nginxdemos/hello
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp02
spec:
  selector:
    app: myapp02
  ports:
  - port: 80
    targetPort: 80
