ing-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: komlab.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo
            port: 
              number: 80
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: myapp02
            port: 
              number: 80
